<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        style="@style/linear_horizontal">
        <TextView
            style="@style/textViewDIalogContact"
            android:text="@string/addName"/>
        <TextView
            android:id="@+id/idTextName"
            style="@style/editTextDialog"/>
    </LinearLayout>
    <LinearLayout
        style="@style/linear_horizontal">
        <TextView
            style="@style/textViewDIalogContact"
            android:text="@string/addNumber"/>
        <TextView
            android:id="@+id/idTextTel"
            style="@style/editTextDialog"/>
    </LinearLayout>
    <LinearLayout
        style="@style/linear_horizontal">
        <TextView
            style="@style/textViewDIalogContact"
            android:text="@string/addAddress"/>
        <TextView
            android:id="@+id/idTextAddress"
            style="@style/editTextDialog"/>
    </LinearLayout>
    <LinearLayout
        style="@style/linear_horizontal">
        <TextView
            style="@style/textViewDIalogContact"
            android:text="@string/friends"/>
        <CheckBox
            android:id="@+id/idCheckBox1"
            style="@style/checkBoxStyle"/>
    </LinearLayout>
    <LinearLayout
        style="@style/linear_horizontal">
        <TextView
            style="@style/textViewDIalogContact"
            android:text="@string/people"/>
        <CheckBox
            android:id="@+id/idCheckBox2"
            style="@style/checkBoxStyle"/>
    </LinearLayout>
    <LinearLayout
        style="@style/linear_horizontal">
        <TextView
            style="@style/textViewDIalogContact"
            android:text="@string/animals"/>
        <CheckBox
            android:id="@+id/idCheckBox3"
            style="@style/checkBoxStyle"/>
    </LinearLayout>

</LinearLayout>